styles/styles.css
/* ... */
.index-section-team div:nth-of-type(2) {
  display: grid;

  grid-column: 1/4;
  grid-template-columns: subgrid;
}

.index-section-team div:first-of-type h2 {
  grid-column: span 3;
}

.index-section-team div:nth-of-type(2) article {
  grid-column: span 1;
}

/****************** HOMEPAGE ******************/

.home-container .banner {
  position: absolute;
  height: var(--banner-desktop-height);
  width: 100%;
  z-index: 1;
  top: 0;
}

.home-container .banner h1 {
  position: absolute;
  width: 100vw;
  bottom: 0;
  z-index: 2;
  margin: 0;
}

.home-container .banner-img {
  position: absolute;
  height: 100%;
  width: 100vw;
  background-position: center;
  background-image: url('../images/index/skiiers1.jpg');
  background-size: cover;
  z-index: 1;
}

.index-content {
  z-index: 0;
  margin-top: var(--banner-desktop-height);
  background-color: var(--primary-black);
}

.home-container {
  text-align: left;
  padding: 0px;
  z-index: 5;
  h1,
  h2,
  h3,
  h4,
  h5,
  p {
    text-align: left;
  }
}

.index-content > img:nth-of-type(2) {
  display: none;
}

/****************** HOMEPAGE footer ******************/

.home-footer {
  padding: 0rem 2rem 2rem 2rem;
}

.home-footer {
  background-color: var(--primary-black);
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 2rem;
}

.home-footer .logo {
  width: 54px;
  height: 54px;
}

.home-footer div {
  justify-items: start;
}

.home-footer div > div {
  display: flex;
  gap: 0.8rem;
  margin-bottom: 1rem;
}

.home-footer > div:nth-of-type(3),
.home-footer > p {
  opacity: 0.5;
}

.home-footer h5 {
  display: inline;
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 700;
  font-style: italic;
  text-transform: uppercase;
  font-size: 1rem;
  line-height: 1rem;
  color: var(--primary-neon-green);
  margin: 0;
  align-self: center;
}

.home-footer h5 span {
  display: block;
  text-align: left;
}

.home-footer button {
  background-color: var(--primary-neon-blue);
  display: block;
  width: 100%;
  font-size: 1rem;
  padding: 0.35rem 0.5rem;
  border-radius: 0.15rem;
}

.home-footer div:nth-of-type(3) a,
.home-footer p {
  text-decoration: none;
  font-family: 'Barlow', sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--primary-white);
  align-self: end;
}

.home-footer div:nth-of-type(2) ul {
  margin: 0;
}

.home-footer div:nth-of-type(2) a {
  text-decoration: none;
  font-family: 'Barlow Condensed', sans-serif;
  text-transform: uppercase;
  text-align: left;
  font-weight: 500;
  font-style: normal;
  color: var(--primary-white);
}

.home-footer ul {
  padding-left: 0;
}

.home-footer ul li {
  list-style-type: none;
  text-align: left;
  padding-bottom: 0.5rem;
}

.home-footer div:nth-of-type(3) {
  display: grid;
  grid-template-columns: subgrid;
  justify-items: start;
  grid-column: span 2;
  gap: 1.5rem;
  margin-bottom: 0.8rem;
}

.socials {
  grid-column: 1;
  display: flex;
  justify-self: start;
  gap: 0.5rem;
  margin: 0.5rem 0;
}

.socials img {
  width: 24px;
  align-items: end;
  align-content: end;
  align-self: flex-end;
}

.home-footer p:last-of-type {
  border-top: 2px solid rgba(255, 255, 255, 0.5);
  padding-top: 0.5rem;
  grid-column: span 2;
  margin: 0;
  text-align: left;
}

.home-footer ul {
  margin: 0;
}

.home-footer button a {
  color: var(--primary-black) !important;
}

/****************** HOMEPAGE Decorative ******************/

.decorative-S-line {
  display: grid;
  margin-top: -16vw;
  grid-column: span 7;
  overflow: hidden;
  place-items: center;
}

.decorative-S-line > img {
  width: 200%;
}

img.decorative-S-green,
img.decorative-S-blue {
  all: unset;
  position: absolute;
  z-index: 5;
}
img.decorative-S-green {
  width: 70vw;
  left: 0;
  margin-top: -4vh;
  margin-left: -20vw;
}
img.decorative-S-blue {
  width: 30vw;
  margin-right: calc(-30vw / 1.5);
  right: 0;
}
/* ... */

